[project]
name = "ismb-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=3.0.0",
    "vitessce[all]==3.9.2",
    "spatialdata==0.7.3",
    "spatialdata-plot==0.4.0",
    "easy-vitessce==0.0.12",
    "scanpy>=1.12.1",
]
